<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/black"
    app:cardCornerRadius="4dp">


        <LinearLayout
            android:id="@+id/rlContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"

            android:layout_marginTop="5dp"

            android:orientation="horizontal"

            android:weightSum="6"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imgBookImage"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="2"


                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_android"
                tools:ignore="ContentDescription,HardcodedText" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="3.5"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"

                    android:text="@string/list_item"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"


                    android:text="@string/author"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtBookPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="10dp"

                    android:paddingTop="15dp"
                    android:text="@string/price"
                    android:textColor="#13D51B"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtBookRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:layout_weight="0.5"

                android:drawableStart="@drawable/ic_baseline_star_24"
                android:paddingTop="10dp"
                android:text="4.5"
                android:textSize="15dp" />


        </LinearLayout>



</androidx.cardview.widget.CardView>
<!--    android:layout_marginTop="5dp"-->
<!--    it will create a grey line on top-->